force-app/main/default/objects/Actual_Revenue__c/Actual_Revenue__c.object-meta.xml
<CustomObject>
    <description>Canonical actual revenue record for one Account+Category+Revenue_Type+Year+Month grain. Populated by the Counterpoint ingestion pipeline via External_Id__c upsert. Used by accountBudgetGrid to compute Actual vs Budget variance. Resolves the Actual_Revenue__c/Actuals_Record__c naming conflict — this is the single authoritative object.</description>
    <label>Actual Revenue</label>
    <nameField>
        <displayFormat>ACT-{0000000}</displayFormat>
        <label>Actual Revenue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Revenues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>