force-app/main/default/objects/Actual_Revenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actual Revenues</relationshipLabel>
    <relationshipName>Actual_Revenues</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>