force-app/main/default/objects/Actual_Revenue__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <label>Advertiser</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actual Revenue Records</relationshipLabel>
    <relationshipName>Actual_Revenue_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>