force-app/main/default/objects/Actual_Revenue__c/fields/AE_Code__c.field-meta.xml
<CustomField>
    <fullName>AE_Code__c</fullName>
    <label>AE Code</label>
    <type>Text</type>
    <length>100</length>
</CustomField>