force-app/main/default/objects/Actual_Revenue__c/fields/Broadcast_Period__c.field-meta.xml
<CustomField>
    <fullName>Broadcast_Period__c</fullName>
    <label>Broadcast Period</label>
    <type>Text</type>
    <length>50</length>
</CustomField>