force-app/main/default/objects/Actual_Revenue__c/fields/Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Type__c</fullName>
    <label>Calendar Type</label>
    <type>Picklist</type>
    <description>Distinguishes Broadcast vs Calendar period accounting; part of the preempt match key alongside Source Order Number and Period.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Calendar</fullName><default>false</default><label>Calendar</label></value>
            <value><fullName>Broadcast</fullName><default>false</default><label>Broadcast</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>