force-app/main/default/objects/Actual_Revenue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Actual Revenues</relationshipLabel>
    <relationshipName>Actual_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>