force-app/main/default/objects/Actual_Revenue__c/fields/Category_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Category_Snapshot__c</fullName>
    <label>Category Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>