force-app/main/default/objects/Actual_Revenue__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Composite key used for Counterpoint upserts: AccountId|CategoryId|RevenueType|Year|Month. Must match Projection__c.Composite_Key__c for variance matching.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>