force-app/main/default/objects/Actual_Revenue__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <label>External Key</label>
    <type>Text</type>
    <length>255</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Idempotency key matching the Inbound_Staging__c.External_Key__c that originated this record.</description>
</CustomField>