force-app/main/default/objects/Actual_Revenue__c/fields/Inbound_Staging__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Staging__c</fullName>
    <label>Inbound Staging</label>
    <type>Lookup</type>
    <referenceTo>Inbound_Staging__c</referenceTo>
    <relationshipLabel>Actual Revenue Records</relationshipLabel>
    <relationshipName>Actual_Revenue_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability link back to the staging row that produced this actual.</description>
</CustomField>