force-app/main/default/objects/Actual_Revenue__c/fields/Is_Late__c.field-meta.xml
<CustomField>
    <fullName>Is_Late__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>