force-app/main/default/objects/Actual_Revenue__c/fields/Is_Preempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Preempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preempt</label>
    <type>Checkbox</type>
    <description>True when this Actual represents a preempt (held inventory awaiting booked replacement). Drives PreemptTransitionService supersede/cancellation logic.</description>
</CustomField>