force-app/main/default/objects/Actual_Revenue__c/fields/Late_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Late_Disposition__c</fullName>
    <description>Disposition for post-close actuals. Populated by lateActualsWorklist. Pending = awaiting review; Accepted = kept and rolled up; Rejected = excluded from projections.</description>
    <label>Late Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>