force-app/main/default/objects/Actual_Revenue__c/fields/Late_Status__c.field-meta.xml
<CustomField>
    <fullName>Late_Status__c</fullName>
    <label>Late Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>