force-app/main/default/objects/Actual_Revenue__c/fields/Period_Month__c.field-meta.xml
<CustomField>
    <fullName>Period_Month__c</fullName>
    <description>Calendar month number (1 = January through 12 = December).</description>
    <label>Period Month</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>