force-app/main/default/objects/Actual_Revenue__c/fields/Pitch_Project__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pitch Project</label>
    <referenceTo>Pitch_Project__c</referenceTo>
    <relationshipLabel>Actual Revenues</relationshipLabel>
    <relationshipName>Actual_Revenues</relationshipName>
    <type>Lookup</type>
</CustomField>