force-app/main/default/objects/Actual_Revenue__c/fields/Preempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Preempt_Status__c</fullName>
    <label>Preempt Status</label>
    <type>Picklist</type>
    <description>Lifecycle status for preempt actuals: Active until superseded by a booked actual or cancelled.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>