force-app/main/default/objects/Actual_Revenue__c/fields/Source_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Order_Number__c</fullName>
    <label>Source Order Number</label>
    <type>Text</type>
    <length>100</length>
    <description>Source-system order identifier used to link preempt and booked actuals through PreemptTransitionService.</description>
</CustomField>