force-app/main/default/objects/Actual_Revenue__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Lookup</type>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Actual Revenue Records</relationshipLabel>
    <relationshipName>Actual_Revenue_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>