force-app/main/default/objects/Actual_Revenue__c/fields/Station_Code__c.field-meta.xml
<CustomField>
    <fullName>Station_Code__c</fullName>
    <label>Station Code</label>
    <type>Text</type>
    <length>50</length>
</CustomField>