force-app/main/default/objects/Actual_Revenue__c/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Unit Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>